# donorbot

./: README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.yml
bot/: .example.env  .pre-commit-config.yaml  Dockerfile  pyproject.toml
bot/alembic/versions/: 2025_07_18_1543-6628055cd052_add_donor_model.py  2025_07_18_2305-8724dd06e971_add_organizer_model.py  2025_07_19_0059-6868acae0bfc_add_donor_day_model.py  2025_07_19_0117-584eb52c274e_add_donation_model.py  2025_07_19_0148-6c3bfcd82630_rename_event_date_field_to_event_.py  2025_07_19_0220-138caa6b2ef5_add_telegram_id_field.py  2025_07_19_0835-5e12a8ab6393_add_is_bone_mallow_donor_field.py  2025_07_19_1152-18a5a030af58_add_content_model.py
bot/src/: lifespan.py  main.py
bot/src/core/: config.py
bot/src/db/: __init__.py
bot/src/di/: __init__.py  container.py
bot/src/di/providers/: __init__.py  config.py  database.py  services.py  (+3 more)
bot/src/dialogs/: __init__.py  donor_add.py  donor_day_menu.py  donor_day_registration.py  donor_edit.py  organizer.py  profile.py  registration.py  states.py  validators.py
bot/src/enums/: __init__.py  donor_type.py
bot/src/handlers/: __init__.py  notifications.py  start.py
bot/src/middlewares/: dialog_error_handler.py
bot/src/models/: __init__.py  content.py  donation.py  donor.py  donor_day.py  organizer.py
bot/src/repositories/: __init__.py  content.py  donation.py  donor.py  donor_day.py  organizer.py
bot/src/scheduling/: __init__.py  broker.py  scheduler.py  source.py
bot/src/services/: excel_generation_service.py  notification_service.py
(+7 files in other folders)
