[project]
name = "donorbotexample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.14",
    "dishka>=1.6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
    "uv-sort>=0.6.1",
]

[tool.ruff]
target-version = "py311"
exclude = ["venv", ".venv", ".env"]

line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    # modules
    "C90", # mccabe complexity
    "DJ",  # django
    "T10", # debugger

    # specific rules
    "COM",     # flake8-commas
    "D100",    # docs stuff
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",    # ignore one-line docstring
    "D203",
    "D212",
    "D213",
    "D400",
    "D415",
    "TRY003",  # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002",  # too verbose descriptions of todos
    "S101",    # prohibited assert statement
    "ARG001",  # unused function argument
    "ANN401",  # disallow Any type
    "RUF001",  # string contrains ambigious o
    "PLR0913", # too many arguments in function signature
]
format.skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["INP001"]
"tests/*" = ["ANN", "INP001"]
